--- a/docs/facs.ipynb
+++ b/docs/facs.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "Here, we'll walk through how to\n",
     "1. iteratively ingest datasets\n",
-    "2. query & search followed by data integration & analysis and result sharing\n",
+    "2. query, search, integrate & analyze datasets\n",
     "\n",
     "```{toctree}\n",
     ":maxdepth: 1\n",
@@ -83,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Ingest a sample dataset"
+    "## Ingest a first file"
    ]
   },
   {
@@ -106,9 +106,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": [
-     "hide-output"
-    ]
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -192,9 +190,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": [
-     "hide-output"
-    ]
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -214,9 +210,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": [
-     "hide-output"
-    ]
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -228,9 +222,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, five features don't pass validation.\n",
-    "\n",
-    "These appear don't appear to be cell markers but rather metadata features.\n",
+    "The remaining non-validated features don't appear to be cell markers but rather metadata features.\n",
     "\n",
     "Let's move them into `adata.obs`:"
    ]
@@ -292,7 +284,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's use the experimental factor ontology to create a \"FACS\" label for the dataset."
+    "We use the [Experimental Factor Ontology](https://www.ebi.ac.uk/efo/) through Bionty to create a \"FACS\" label for the dataset:"
    ]
   },
   {
@@ -310,11 +302,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.ExperimentalFactor.from_bionty(\n",
-    "    ontology_id=\"EFO:0009108\"\n",
-    ").save()  # create a record ans save it to the registry\n",
+    "# import the record from the public ontology and save it to the registry\n",
+    "lb.ExperimentalFactor.from_bionty(ontology_id=\"EFO:0009108\").save()\n",
     "\n",
-    "lb.ExperimentalFactor.filter().df()  # show the content of the registry"
+    "# show the content of the registry\n",
+    "lb.ExperimentalFactor.filter().df()"
    ]
   },
   {
@@ -384,7 +376,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Inspect the registered dataset"
+    "## Inspect the registered file"
    ]
   },
   {
