--- a/docs/facs1.ipynb
+++ b/docs/facs1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ingest another dataset"
+    "# Ingest a second file"
    ]
   },
   {
@@ -72,7 +72,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, let's standardize the cell markers and validate them:"
+    "Let's see how many markers validate:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "validated = lb.CellMarker.validate(adata.var.index)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's standardize and re-validate:"
    ]
   },
   {
@@ -119,6 +135,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scanpy as sc\n",
+    "\n",
+    "sc.pp.pca(adata)\n",
+    "sc.pl.pca(adata, color=markers.cd14.name)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -145,7 +173,7 @@
    "source": [
     "file = ln.File.from_anndata(\n",
     "    adata,\n",
-    "    description=\"My fcs file\",\n",
+    "    description=\"Flow cytometry file 2\",\n",
     "    field=lb.CellMarker.name,\n",
     "    modality=modalities.protein,\n",
     ")"
