--- a/docs/facs2.ipynb
+++ b/docs/facs2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Query & analyze flow cytometry datasets"
+    "# Query & analyze flow cytometry data"
    ]
   },
   {
@@ -32,14 +32,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Flow marker registry ![](https://img.shields.io/badge/Access-10b981) "
+    "## Inspect the CellMarker registry ![](https://img.shields.io/badge/Access-10b981) "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Check out your flow marker registry:"
+    "Inspect your aggregated cell marker registry:"
    ]
   },
   {
@@ -55,12 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Search for a marker (synonyms aware):\n",
-    "\n",
-    "```{tip}\n",
-    "\n",
-    "Search for a non-registered marker from public source: `lb.CellMarker.bionty().search(...)`\n",
-    "```"
+    "Search for a marker (synonyms aware):"
    ]
   },
   {
@@ -76,6 +71,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Query files by markers ![](https://img.shields.io/badge/Access-10b981) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Auto-complete of markers:"
    ]
   },
@@ -85,15 +87,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cell_markers = lb.CellMarker.lookup()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "cell_markers = lb.CellMarker.lookup()\n",
+    "\n",
     "cell_markers.cd14"
    ]
   },
@@ -101,7 +96,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Query panels and datasets based on markers, e.g. which datasets have CD14 in the flow panel:"
+    "Query panels and datasets based on markers, e.g., which datasets have `'CD14'` in the flow panel:"
    ]
   },
   {
@@ -144,7 +139,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Shared cell markers between two files:"
+    "Find shared cell markers between two files:"
    ]
   },
   {
@@ -175,7 +170,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Load file in memory:"
+    "Load files into memory and concatenate:"
    ]
   },
   {
@@ -184,7 +179,56 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file1.load()"
+    "adata1 = file1.load()\n",
+    "adata2 = file2.load()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import anndata as ad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adata = ad.concat(\n",
+    "    [adata1, adata2],\n",
+    "    label=\"file\",\n",
+    "    keys=[file1.description, file2.description],\n",
+    ")\n",
+    "adata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scanpy as sc\n",
+    "\n",
+    "sc.pp.pca(adata)\n",
+    "sc.pl.pca(adata, color=markers.cd14.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = ln.Dataset(adata, name=\"Aggregated dataset\")\n",
+    "\n",
+    "dataset.save()\n",
+    "\n",
+    "dataset.view_flow()"
    ]
   },
   {
