--- a/docs/facs1.ipynb
+++ b/docs/facs1.ipynb
@@ -55,10 +55,65 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adata"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This `AnnData` object does not require filtering, normalizing or formatting, hence, there is no ![](https://img.shields.io/badge/Transform-10b981) step."
+    "## Transform: normalize ![](https://img.shields.io/badge/Transform-10b981)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import anndata as ad\n",
+    "import pytometry as pm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adata = ad.AnnData(adata.to_df().dropna())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pm.pp.split_signal(adata, var_key=\"channel\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pm.tl.normalize_arcsinh(adata, cofactor=150)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adata.to_df().describe()"
    ]
   },
   {
@@ -135,18 +190,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import scanpy as sc\n",
-    "\n",
-    "sc.pp.pca(adata)\n",
-    "sc.pl.pca(adata, color=markers.cd14.name)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -162,7 +205,8 @@
     "modalities = ln.Modality.lookup()\n",
     "features = ln.Feature.lookup()\n",
     "efs = lb.ExperimentalFactor.lookup()\n",
-    "species = lb.Species.lookup()"
+    "species = lb.Species.lookup()\n",
+    "markers = lb.CellMarker.lookup()"
    ]
   },
   {
@@ -221,6 +265,25 @@
    "outputs": [],
    "source": [
     "file.view_flow()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Inspect a PCA fo QC - this dataset looks much like noise:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scanpy as sc\n",
+    "\n",
+    "sc.pp.pca(adata)\n",
+    "sc.pl.pca(adata, color=markers.cd14.name)"
    ]
   }
  ],
