--- a/docs/facs1.ipynb
+++ b/docs/facs1.ipynb
@@ -86,15 +86,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata = ad.AnnData(adata.to_df().dropna())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "pm.pp.split_signal(adata, var_key=\"channel\")"
    ]
   },
@@ -113,6 +104,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "adata = adata[\n",
+    "    adata.to_df().isna().sum(axis=1) == 0\n",
+    "]  # subset to rows that do not have nan values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "adata.to_df().describe()"
    ]
   },
@@ -120,7 +122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Validate ![](https://img.shields.io/badge/Validate-10b981) "
+    "## Validate cell markers ![](https://img.shields.io/badge/Validate-10b981) "
    ]
   },
   {
