--- a/docs/facs2.ipynb
+++ b/docs/facs2.ipynb
@@ -87,9 +87,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cell_markers = lb.CellMarker.lookup()\n",
+    "markers = lb.CellMarker.lookup()\n",
     "\n",
-    "cell_markers.cd14"
+    "markers.cd14"
    ]
   },
   {
@@ -105,7 +105,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "panels_with_cd14 = ln.FeatureSet.filter(cell_markers=cell_markers.cd14).all()"
+    "panels_with_cd14 = ln.FeatureSet.filter(cell_markers=markers.cd14).all()"
    ]
   },
   {
@@ -216,6 +216,13 @@
     "\n",
     "sc.pp.pca(adata)\n",
     "sc.pl.pca(adata, color=markers.cd14.name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create a concatenated dataset"
    ]
   },
   {
