--- a/docs/facs2.ipynb
+++ b/docs/facs2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Query & analyze flow cytometry data"
+    "# Query & analyze"
    ]
   },
   {
@@ -71,14 +71,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Query files by markers ![](https://img.shields.io/badge/Access-10b981) "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Auto-complete of markers:"
+    "Look up markers with auto-complete:"
    ]
   },
   {
@@ -90,6 +83,13 @@
     "markers = lb.CellMarker.lookup()\n",
     "\n",
     "markers.cd14"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Query files by markers ![](https://img.shields.io/badge/Access-10b981) "
    ]
   },
   {
@@ -148,7 +148,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# no need to load the content of files\n",
     "files = ln.File.filter(feature_sets__in=panels_with_cd14, species=species.human).list()\n",
     "file1, file2 = files[0], files[1]"
    ]
@@ -159,10 +158,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file1_markers = file1.features[\"var\"]\n",
-    "file2_markers = file2.features[\"var\"]\n",
-    "\n",
-    "shared_markers = file1_markers & file2_markers\n",
+    "shared_markers = file1.features[\"var\"] & file2.features[\"var\"]\n",
     "shared_markers.list(\"name\")"
    ]
   },
