--- a/docs/facs.ipynb
+++ b/docs/facs.ipynb
@@ -258,7 +258,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Register metadata ![](https://img.shields.io/badge/Register-10b981)"
+    "### Register: metadata ![](https://img.shields.io/badge/Register-10b981)"
    ]
   },
   {
