--- a/docs/facs1.ipynb
+++ b/docs/facs1.ipynb
@@ -104,9 +104,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata = adata[\n",
+    "adata = adata[  # subset to rows that do not have nan values\n",
     "    adata.to_df().isna().sum(axis=1) == 0\n",
-    "]  # subset to rows that do not have nan values"
+    "]"
    ]
   },
   {
@@ -179,16 +179,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now they pass validation except for non-markers: `'FSC-A'`, `'FSC-H'`"
+    "Now they pass validation:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "lb.CellMarker.validate(adata.var.index);"
+    "validated = lb.CellMarker.validate(adata.var.index)\n",
+    "assert all(validated)"
    ]
   },
   {
