--- a/docs/facs.ipynb
+++ b/docs/facs.ipynb
@@ -314,7 +314,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Register: register data & annotate with metadata ![](https://img.shields.io/badge/Register-10b981)"
+    "### Register: data & annotate with metadata ![](https://img.shields.io/badge/Register-10b981)"
    ]
   },
   {
