--- a/docs/facs2.ipynb
+++ b/docs/facs2.ipynb
@@ -166,6 +166,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Concatenate & analyze queried files ![](https://img.shields.io/badge/Transform-10b981)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Load files into memory and concatenate:"
    ]
   },
@@ -218,7 +225,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create a concatenated dataset"
+    "## Register a concatenated dataset ![](https://img.shields.io/badge/Register-10b981)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If we believe that we'll need this dataset, again, we can register a concatenated version:"
    ]
   },
   {
@@ -227,10 +241,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = ln.Dataset(adata, name=\"Aggregated dataset\")\n",
-    "\n",
+    "dataset = ln.Dataset(adata, name=\"Concatenated dataset\")\n",
     "dataset.save()\n",
-    "\n",
     "dataset.view_flow()"
    ]
   },
