📝 Less output for CellMarker registry

--- a/docs/facs2.ipynb
+++ b/docs/facs2.ipynb
@@ -48,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.CellMarker.filter().df()"
+    "lb.CellMarker.filter().df().head()"
    ]
   },
   {
