--- a/docs/facs2.ipynb
+++ b/docs/facs2.ipynb
@@ -39,7 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Inspect your aggregated cell marker registry:"
+    "Inspect your aggregated cell marker registry as a `DataFrame`:"
    ]
   },
   {
