📝 Shard dataset in FACS

--- a/docs/facs2.ipynb
+++ b/docs/facs2.ipynb
@@ -225,14 +225,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Register a concatenated dataset ![](https://img.shields.io/badge/Register-10b981)"
+    "## Register a sharded dataset ![](https://img.shields.io/badge/Register-10b981)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If we believe that we'll need this dataset, again, we can register a concatenated version:"
+    "If we believe that we'll need this dataset, again, we can register a sharded version:"
    ]
   },
   {
@@ -241,7 +241,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = ln.Dataset(adata, name=\"Concatenated dataset\")\n",
+    "dataset = ln.Dataset([file1, file2], name=\"Batch 1 and batch 2\")\n",
     "dataset.save()\n",
     "dataset.view_flow()"
    ]
