📝 Add another notebook

--- a/docs/facs.ipynb
+++ b/docs/facs.ipynb
@@ -52,7 +52,7 @@
    },
    "outputs": [],
    "source": [
-    "!lamin init --storage ./test-flow --schema bionty"
+    "!lamin init --storage ./test-facs --schema bionty"
    ]
   },
   {
