--- a/docs/facs2.ipynb
+++ b/docs/facs2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Query & analyze"
+    "# Query & integrate data"
    ]
   },
   {
@@ -166,65 +166,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Concatenate & analyze queried files ![](https://img.shields.io/badge/Transform-10b981)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Load files into memory and concatenate:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "adata1 = file1.load()\n",
-    "adata2 = file2.load()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import anndata as ad"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "adata = ad.concat(\n",
-    "    [adata1, adata2],\n",
-    "    label=\"file\",\n",
-    "    keys=[file1.description, file2.description],\n",
-    ")\n",
-    "adata"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import scanpy as sc\n",
-    "\n",
-    "sc.pp.pca(adata)\n",
-    "sc.pl.pca(adata, color=markers.cd14.name)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Register a sharded dataset ![](https://img.shields.io/badge/Register-10b981)"
    ]
   },
@@ -232,7 +173,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If we believe that we'll need this dataset, again, we can register a sharded version:"
+    "Because we found overlap between the features of these files, we'll readily be able to concatenate them or iterate over them when training a model.\n",
+    "\n",
+    "Let's register a sharded dataset consisting of the two files without duplicating any data:"
    ]
   },
   {
@@ -241,20 +184,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = ln.Dataset([file1, file2], name=\"Batch 1 and batch 2\")\n",
-    "dataset.save()\n",
+    "dataset = ln.Dataset([file1, file2], name=\"Sharded dataset 1\")\n",
+    "dataset.save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "dataset.view_flow()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# clean up test instance\n",
-    "!lamin delete --force test-flow\n",
-    "!rm -r test-flow"
+    "```{note}\n",
+    "\n",
+    "Alternatively, we could have concatenated the files and duplicated the data by storing the concatenated `AnnData` object as `.h5ad`.\n",
+    "\n",
+    "Depending on the use case, this might have been preferred. \n",
+    "\n",
+    "```"
    ]
   }
  ],
