📝 Shard dataset in FACS (#68)

--- a/docs/facs.ipynb
+++ b/docs/facs.ipynb
@@ -32,6 +32,7 @@
     "\n",
     "facs1\n",
     "facs2\n",
+    "facs3\n",
     "```"
    ]
   },
@@ -52,7 +53,7 @@
    },
    "outputs": [],
    "source": [
-    "!lamin init --storage ./test-flow --schema bionty"
+    "!lamin init --storage ./test-facs --schema bionty"
    ]
   },
   {
