📝 Build up dataset incrementally

--- a/docs/facs.ipynb
+++ b/docs/facs.ipynb
@@ -20,11 +20,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Flow cytometry is a technique used to detect and measure physical and chemical characteristics of a population of cells or particles ([wiki](https://en.wikipedia.org/wiki/Flow_cytometry)).\n",
+    "This use case walks through a sequence of steps that walks through managing a lake of `.fcs` files as a Flow cytometry lakehouse.\n",
     "\n",
-    "Here, we'll walk through how to\n",
-    "1. iteratively ingest datasets\n",
-    "2. query, search, integrate & analyze datasets\n",
+    "You will\n",
+    "\n",
+    "1. start by ingesting a single file and seed a versioned dataset\n",
+    "2. append a new batch to the dataset and create a new version\n",
+    "3. look at an overview of ingested data\n",
+    "4. query the data and turn it into analytical insights to share back with the team\n",
     "\n",
     "```{toctree}\n",
     ":maxdepth: 1\n",
@@ -119,7 +122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We use [readfcs](https://lamin.ai/docs/readfcs) to read the raw fcs file into memory:"
+    "We use [readfcs](https://lamin.ai/docs/readfcs) to read the raw fcs file into memory and create an `AnnData` object:"
    ]
   },
   {
@@ -358,25 +361,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Annotate by linking FACS & species labels:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "file.labels.add(efs.fluorescence_activated_cell_sorting, features.assay)\n",
-    "file.labels.add(species.human, features.species)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Inspect the registered file"
    ]
   },
@@ -438,6 +422,91 @@
     "\n",
     "sc.pp.pca(adata)\n",
     "sc.pl.pca(adata, color=markers.cd14.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file.view_flow()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create a dataset from the file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = ln.Dataset(file, name=\"My versioned FACS dataset\", version=\"1\")\n",
+    "\n",
+    "dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's inspect the features measured in this dataset which were inherited from the file:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset.features"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This looks all good, hence, let's save it:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset.save()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Annotate by linking FACS & species labels:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset.labels.add(efs.fluorescence_activated_cell_sorting, features.assay)\n",
+    "dataset.labels.add(species.human, features.species)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset.view_flow()"
    ]
   }
  ],
