--- a/docs/facs3.ipynb
+++ b/docs/facs3.ipynb
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = ln.Dataset.filter(name=\"Sharded dataset 1\").one()"
+    "dataset = ln.Dataset.filter(name=\"My versioned FACS dataset\", version=\"2\").one()"
    ]
   },
   {
