--- a/docs/facs1.ipynb
+++ b/docs/facs1.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ingest a second file"
+    "# Append a new batch of data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We have one file in storage and are about to receive a new batch of data.\n",
+    "\n",
+    "In this notebook, we'll see how to manage the situation."
    ]
   },
   {
@@ -33,14 +42,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us validate and register another `.fcs` file:"
+    "## Ingest a new file"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Access ![](https://img.shields.io/badge/Access-10b981)"
+    "### Access ![](https://img.shields.io/badge/Access-10b981)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let us validate and register another `.fcs` file:"
    ]
   },
   {
@@ -122,7 +138,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Validate cell markers ![](https://img.shields.io/badge/Validate-10b981) "
+    "### Validate cell markers ![](https://img.shields.io/badge/Validate-10b981) "
    ]
   },
   {
@@ -198,7 +214,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Register ![](https://img.shields.io/badge/Register-10b981) "
+    "### Register ![](https://img.shields.io/badge/Register-10b981) "
    ]
   },
   {
@@ -289,6 +305,95 @@
     "\n",
     "sc.pp.pca(adata)\n",
     "sc.pl.pca(adata, color=markers.cd14.name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create a new version of the dataset by appending a file"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Query the old version:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset_v1 = ln.Dataset.filter(name=\"My versioned FACS dataset\").one()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset_v2 = ln.Dataset(\n",
+    "    [file, dataset_v1.file], is_new_version_of=dataset_v1, version=\"2\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset_v2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset_v2.features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset_v2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset_v2.save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset_v2.labels.add(efs.fluorescence_activated_cell_sorting, features.assay)\n",
+    "dataset_v2.labels.add(species.human, features.species)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset_v2.view_flow()"
    ]
   }
  ],
