--- a/docs/facs2.ipynb
+++ b/docs/facs2.ipynb
@@ -130,9 +130,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "features = ln.Feature.lookup()\n",
-    "efs = lb.ExperimentalFactor.lookup()\n",
-    "species = lb.Species.lookup()"
+    "features = ln.Feature.lookup()"
    ]
   },
   {
@@ -148,7 +146,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "files = ln.File.filter(feature_sets__in=panels_with_cd14, species=species.human).list()\n",
+    "files = ln.File.filter(feature_sets__in=panels_with_cd14).list()\n",
     "file1, file2 = files[0], files[1]"
    ]
   },
