--- a/docs/facs.ipynb
+++ b/docs/facs.ipynb
@@ -20,14 +20,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This use case walks through a sequence of steps that walks through managing a lake of `.fcs` files as a Flow cytometry lakehouse.\n",
+    "Here, you will\n",
     "\n",
-    "You will\n",
-    "\n",
-    "1. start by ingesting a single file and seed a versioned dataset\n",
-    "2. append a new batch to the dataset and create a new version\n",
-    "3. look at an overview of ingested data\n",
-    "4. query the data and turn it into analytical insights to share back with the team\n",
+    "1. read a single `.fcs` file as an `AnnData` and seed a versioned dataset with it\n",
+    "2. append a new data batch (a new `.fcs` file) to create a new version of the dataset\n",
+    "3. look at an overview of ingested files and cell markers\n",
+    "4. query the data and store analytical results as plots\n",
     "\n",
     "```{toctree}\n",
     ":maxdepth: 1\n",
