--- a/docs/facs2.ipynb
+++ b/docs/facs2.ipynb
@@ -130,9 +130,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "features = ln.Feature.lookup()\n",
-    "efs = lb.ExperimentalFactor.lookup()\n",
-    "species = lb.Species.lookup()"
+    "features = ln.Feature.lookup()"
    ]
   },
   {
@@ -148,7 +146,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "files = ln.File.filter(feature_sets__in=panels_with_cd14, species=species.human).list()\n",
+    "files = ln.File.filter(feature_sets__in=panels_with_cd14).list()\n",
     "file1, file2 = files[0], files[1]"
    ]
   },
@@ -160,54 +158,6 @@
    "source": [
     "shared_markers = file1.features[\"var\"] & file2.features[\"var\"]\n",
     "shared_markers.list(\"name\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Register a sharded dataset ![](https://img.shields.io/badge/Register-10b981)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Because we found overlap between the features of these files, we'll readily be able to concatenate them or iterate over them when training a model.\n",
-    "\n",
-    "Let's register a sharded dataset consisting of the two files without duplicating any data:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset = ln.Dataset([file1, file2], name=\"Sharded dataset 1\")\n",
-    "dataset.save()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset.view_flow()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "```{note}\n",
-    "\n",
-    "Alternatively, we could have concatenated the files and duplicated the data by storing the concatenated `AnnData` object as `.h5ad`.\n",
-    "\n",
-    "Depending on the use case, this might have been preferred. \n",
-    "\n",
-    "```"
    ]
   }
  ],
