--- a/docs/facs3.ipynb
+++ b/docs/facs3.ipynb
@@ -43,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata = dataset.load()"
+    "adata = dataset.load(join=\"inner\")"
    ]
   },
   {
