--- a/docs/bulkrna.ipynb
+++ b/docs/bulkrna.ipynb
@@ -19,9 +19,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Bulk RNA sequencing (RNA-seq) is a high-throughput technique that measures the gene expression levels of thousands of genes simultaneously, providing insights into overall cellular transcription patterns.\n",
+    "```{note}\n",
     "\n",
-    "Here, we'll demonstrate how to make a bulk RNA-seq count matrix data ware house ready and apply the TVR (transform, validate, register) workflow on it."
+    "More comprehensive examples are provided for these data types:\n",
+    "\n",
+    "- {doc}`scrna`\n",
+    "- {doc}`facs`\n",
+    "\n",
+    "```"
    ]
   },
   {
@@ -55,6 +60,13 @@
     "import lnschema_bionty as lb\n",
     "import pandas as pd\n",
     "import anndata as ad"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ingest data"
    ]
   },
   {
@@ -376,7 +388,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Example queries"
+    "## Query data"
    ]
   },
   {
