--- a/docs/multimodal.ipynb
+++ b/docs/multimodal.ipynb
@@ -19,10 +19,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "scRNA data has moved beyond just RNA and can also include the measurements of other modalities such as chromatin accessibility, surface proteins or adaptive immune receptors.\n",
-    "ECCITE-seq is designed to enable interrogation of single-cell transcriptomes together with surface protein markers in the context of CRISPR screens.\n",
+    "```{warning}\n",
     "\n",
-    "Here, we'll showcase how to curate and register ECCITE-seq data from [Papalexi21](https://www.nature.com/articles/s41592-019-0392-0) in the form of [MuData](https://github.com/scverse/mudata) objects."
+    "This is, for now, just a stub.\n",
+    "\n",
+    "```\n",
+    "\n",
+    "Here, we'll showcase how to curate and register ECCITE-seq data from [Papalexi21](https://www.nature.com/articles/s41592-019-0392-0) in the form of [MuData](https://github.com/scverse/mudata) objects. ECCITE-seq is designed to enable interrogation of single-cell transcriptomes together with surface protein markers in the context of CRISPR screens.\n"
    ]
   },
   {
