--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -18,6 +18,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```{warning}\n",
+    "\n",
+    "This is, for now, just a stub.\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Setup"
    ]
   },
